# bbcmd

./: Cargo.toml  README.md
doc/: ebom.md  refdes.md
src/: arguments.rs  cfg.rs  check_op.rs  ebom_op.rs  item_attributes.rs  item_params.rs  library.rs  main.rs  output.rs  refdes.rs  refdes_op.rs  scd.rs  scdbom_op.rs  sch.rs  schematic_arc.rs  schematic_box.rs  schematic_bus.rs  schematic_circle.rs  schematic_complex.rs  schematic_item.rs  schematic_line.rs  schematic_net.rs  schematic_page.rs  schematic_path.rs  schematic_pin.rs  schematic_reader.rs  schematic_set.rs  schematic_text.rs  schematic_version.rs
src/cfg/: config.rs  config_args.rs  project.rs
src/check_op/: check.rs  check_subcommand.rs  checks.rs  error.rs
src/check_op/checks/: invalid_refdes.rs  unassigned_refdes.rs
src/ebom_op/: ebom_subcommand.rs  entry.rs  key.rs
src/prj/: project.rs
src/refdes/: refdes_subcommand.rs
src/refdes_op/: assigner.rs  refdes.rs  refdes_counters.rs  refdes_subcommand.rs
src/scd/: drawing.rs  group.rs  library.rs  part.rs
src/scdbom_op/: entry.rs  key.rs  scdbom_subcommand.rs
src/sch/: arc.rs  box.rs  bus.rs  circle.rs  complex.rs  design.rs  item.rs  item_attributes.rs  item_params.rs  line.rs  net.rs  page.rs  path.rs  pin.rs  reader.rs  schematic_arc.rs  schematic_box.rs  schematic_bus.rs  schematic_circle.rs  schematic_complex.rs  schematic_item.rs  schematic_line.rs  schematic_net.rs  schematic_page.rs  schematic_path.rs  schematic_pin.rs  schematic_reader.rs  schematic_set.rs  schematic_text.rs  text.rs
tests/data/: bbcmd.bbproj  bbcmd.conf
(+9 files in other folders)
