[package]
name = "bbcmd"
description = "Command line utility for Lepton-EDA"
version = "0.1.0"
authors = ["Edward Hennessy <ehennes@fastmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1.3.1"
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.44"
structopt = "0.3.7"
